2003-04-24  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFileName.c: fix to bug reported privately by
	Jeff where, for example, 'glob -path {[tcl]} *' gets confused
	by the leading special character (which is escaped internally),
	and instead lists files in '/'.  Bug only occurs on Windows 
	where '\' is also a directory separator.
	* tests/fileName.test: added test for the above bug.
	
2003-04-22  Andreas Kupries  <andreask@activestate.com>

	* The changes below fix SF bugs [593810], and [718045].

	* generic/tclIO.c (Tcl_CutChannel, Tcl_SpliceChannel):
	  Invoke TclpCutSockChannel and TclpSpliceSockChannel.

	* generic/tclInt.h: Declare TclpCutSockChannel and
	  TclpSpliceSockChannel.

	* unix/tclUnixSock.c (TclpCutSockChannel, TclpSpliceSockChannel):
	  Dummy functions, on unix the sockets are _not_ handled
	  specially.

	* mac/tclMacSock.c (TclpCutSockChannel, TclpSpliceSockChannel):
	* win/tclWinSock.c (TclpCutSockChannel, TclpSpliceSockChannel):
	  New functions to handle socket specific cut/splice operations:
	  auto-initi of socket system for thread on splice, management of
	  the module internal per-thread list of sockets, management of
	  association of sockets with HWNDs for event notification.

	* win/tclWinSock.c (NewSocketInfo): Extended initialization
	  assignments to cover all items of the structure. During
	  debugging of the new code mentioned above I found that two
	  fileds could contain bogus data.

	* win/tclWinFile.c: Added #undef HAVE_NO_FINDEX_ENUMS before
	  definition because when compiling in debug mode the compiler
	  complains about a redefinition, and this warning is also treated
	  as an error.

2003-04-21  Don Porter  <dgp@users.sourceforge.net>

        * library/tcltest/tcltest.tcl:  When the return code of a test does
        not meet expectations, report that as the reason for test failure,
        and do not attempt to check the test result for correctness.
        [Bug 725253]
